--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -64,21 +64,21 @@
         <url-pattern>/register.jsp</url-pattern>
     </servlet-mapping>
 
-    <filter>
-        <filter-name>loginFilter</filter-name>
-        <filter-class>filter.loginFilter</filter-class>
-    </filter>
+    <!--<filter>-->
+        <!--<filter-name>loginFilter</filter-name>-->
+        <!--<filter-class>filter.loginFilter</filter-class>-->
+    <!--</filter>-->
 
-    <filter-mapping>
-        <filter-name>loginFilter</filter-name>
-        <url-pattern>/login</url-pattern>
-    </filter-mapping>
-    <filter-mapping>
-        <filter-name>loginFilter</filter-name>
-        <url-pattern>/hello</url-pattern>
-    </filter-mapping>
-    <filter-mapping>
-        <filter-name>loginFilter</filter-name>
-        <url-pattern>/feedback</url-pattern>
-    </filter-mapping>
+    <!--<filter-mapping>-->
+        <!--<filter-name>loginFilter</filter-name>-->
+        <!--<url-pattern>/login</url-pattern>-->
+    <!--</filter-mapping>-->
+    <!--<filter-mapping>-->
+        <!--<filter-name>loginFilter</filter-name>-->
+        <!--<url-pattern>/hello</url-pattern>-->
+    <!--</filter-mapping>-->
+    <!--<filter-mapping>-->
+        <!--<filter-name>loginFilter</filter-name>-->
+        <!--<url-pattern>/feedback</url-pattern>-->
+    <!--</filter-mapping>-->
 </web-app>
